# python-scratch

./: README.md  pyproject.toml
series/: Fibonacci.py
sort/: MergeSort.py
